# testrepo

./: .env.example  .gitignore  .gitmodules  .mcp.json  APK_DOWNLOAD.md  App.js  App.jsx  BUILD_SUMMARY.md  CLAUDE.md  Dockerfile  Header.jsx  INSTALL_ENGLISH.md  OptionChainTable.jsx  QUICKSTART.md  README.md  app.json  docker-compose.yml  index.css  index.html  jest.setup.ui.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_dashboard.bat  run_dashboard.sh  run_mobile_backend.bat  setup-local-dev.sh  setup.sh  tsconfig.base.json  useRestAPI.js  useWebSocket.js  viral_bot.py  viral_bot_requirements.txt
.claude/: plugins.json
.claude/plugins/indian-algo-trading/: .mcp.json
.github/: sudheer1.yml
.github/workflows/: build-apk.yml  humanvoice-apk.yml  test.yml
AstralOSINT/: README.md  index.html  run.sh
AstralOSINT/css/: style.css
AstralOSINT/js/: map.js  menu.js
android/: .gitignore  SpotifyMashupGenerator.apk  build.gradle  build.sh  settings.gradle
android-compose/: .gitignore  README.md  settings.gradle.kts
android-compose/app/: build.gradle.kts  proguard-rules.pro
android/app/: build.gradle  proguard-rules.pro
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  config.py  main.py  scheduler.py
backend/app/api/: deps.py  routes_audit.py  routes_connectors.py  routes_lab.py  routes_performance.py  routes_signals.py
backend/app/audit/: __init__.py  audit_log.py  reconciliation.py
backend/app/backtest/: __init__.py  costs.py  data_loader.py  engine.py  metrics.py
backend/app/connectors/: __init__.py  base.py  csv_replay.py  upstox_live.py  yahoo_quote.py
backend/app/costs/: __init__.py  india_fno.py
backend/app/db/: __init__.py  models.py  repositories.py  session.py
backend/app/domain/: __init__.py  signals.py  trades.py
backend/app/domain/strategies/: __init__.py  base.py  donchian_break.py  inside_bar.py  macd_flip.py  momentum_breakout.py  momentum_burst.py  range_breakout.py  reversal_scalp.py
backend/app/engine/: __init__.py  paper_trader.py  risk_manager.py  signal_engine.py  tick_processor.py
backend/app/lab/: __init__.py  runner.py
backend/app/reporting/: __init__.py  claude_analyst.py  personas.py  telegram_bot.py
backend/app/upstox/: __init__.py  ws_client.py
backend/data/: sample_ohlcv.csv
backend/tests/: conftest.py  test_backtest.py  test_connectors.py  test_costs.py  test_extra_strategies.py  test_lab.py  test_paper_trader.py  test_reconciliation.py  test_signal_engine.py  test_strategies.py
backtest/: costs.py  engine.py  metrics.py  slippage.py  walk_forward.py
broker/: __init__.py  base.py  paper.py  upstox.py
config/: settings.py
costs/: __init__.py  zerodha_upstox.py
data/: schema.sql
data/fixtures/: bhavcopy_sample.csv  generate.py  ohlcv_1m_sample.csv  options_chain_sample.csv
data/ingest/: completeness_report.py  live_ws.py  nse_bhavcopy.py  quandl_loader.py  runner.py  upstox_historical.py  yfinance_loader.py
db/: init.sql
equity_research_mcp/: server.py
equity_research_mcp/tools/: fundamental.py  reports.py  sentiment.py  stock_data.py
execution/: agent.py  order_manager.py  tv_webhook.py
features/: edge_detection.py  microstructure.py  options.py  regime.py  technical.py
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
humanvoice_books/: .gitignore  BUILD.md  analysis_options.yaml  pubspec.yaml
humanvoice_books/android/: build.gradle
humanvoice_books/android/app/: build.gradle
humanvoice_books/android/app/src/main/cpp/: CMakeLists.txt  stub.cpp
humanvoice_books/lib/: main.dart
humanvoice_books/lib/bloc/: book_bloc.dart
humanvoice_books/lib/models/: book.dart  segment.dart
humanvoice_books/lib/services/: audio_service.dart  book_analyzer.dart  library_service.dart  m4b_generator.dart  (+2 more)
mobile_api/: __init__.py  auth.py  demo_runner.py  push.py  routes_rest.py  routes_ws.py  schemas.py  server.py  state_bus.py
mobile_app/: .gitignore  README.md  pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/test/: candle_aggregator_test.dart  paper_trader_test.dart  strategies_test.dart  update_service_test.dart  upstox_test.dart  widget_test.dart
monitor/: dashboard.py
regime/: __init__.py  classifier.py  meta_controller.py
risk/: __init__.py  engine.py  kill_switch.py  limits.py  sizer.py
spotify_mashup/: __init__.py  __main__.py  audio_downloader.py  audio_manipulator.py  audio_mixer.py  main.py  pipeline.py  requirements.txt  search.py  spotify_fetcher.py  stem_separator.py  trending_detector.py
src/components/: BalanceCard.js  GradientButton.js  NetworkBanner.js  PendingTransactionItem.js  SectionHeader.js
src/context/: NetworkContext.js
src/screens/: DashboardScreen.js  HistoryScreen.js  PaymentEntryScreen.js  QRScannerScreen.js  SuccessScreen.js
src/theme/: colors.js
src/utils/: format.js  storage.js  upiParser.js  validation.js
strategies/: base.py  discover.py  registry.py  rule_strategy.py
tests/: test_backtest.py  test_broker.py  test_costs.py  test_e2e.py  test_execution.py  test_ingest.py  test_mobile_api.py  test_regime.py  test_risk.py
tests/backtest/: test_engine.py  test_metrics.py  test_walk_forward.py
tests/costs/: test_fees.py
tests/features/: test_microstructure.py  test_options.py  test_technical.py
(+135 files in other folders)
