[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "scalping-agent"
version = "0.1.0"
description = "Autonomous scalping agent for Indian F&O (Nifty, Bank Nifty, options)"
authors = [{name = "Scalping Agent Team"}]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.poetry.dependencies]
python = "^3.11"
# Core data/ML
pandas = "^2.1"
numpy = "^1.26"
scikit-learn = "^1.3"
xgboost = "^2.0"
lightgbm = "^4.0"
# Options/financial
py-vollib = "^1.0.2"
pandas-ta = "^0.3.14"
ta-lib = {version = "^0.4.28", optional = true}
# Brokers/APIs
upstox-client = "^1.0"
kiteconnect = "^4.2"
# Time series DB
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
# Web/async
fastapi = "^0.104"
uvicorn = "^0.24"
pydantic = "^2.0"
pydantic-settings = "^2.0"
# Utilities
python-dotenv = "^1.0"
requests = "^2.31"
pytz = "^2023.3"
# Backtesting/discovery
optuna = "^3.0"
# Monitoring/logging
python-telegram-bot = "^20.0"
prometheus-client = "^0.18"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
