[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalping-agent"
version = "0.1.0"
description = "Autonomous scalping agent for Indian F&O — cost-aware strategy discovery and walk-forward validation."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "saimanojbaru" }]

dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.2,<2.3",
    "pandas-ta>=0.3.14b",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "optuna>=3.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "websockets>=12.0",
    "py-vollib>=1.0.1",
    "tenacity>=8.4",
    "rich>=13.7",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
scalp-ingest-nse = "data.ingest.nse_bhavcopy:cli"
scalp-completeness = "data.ingest.completeness_report:cli"
scalp-discover = "strategies.discover:cli"
scalp-walkforward = "backtest.walk_forward:cli"

[tool.setuptools.packages.find]
include = ["config*", "costs*", "data*", "features*", "strategies*", "regime*", "backtest*", "risk*", "broker*", "execution*", "monitor*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:pandas_ta",
]
