[project]
name = "scalping-backend"
version = "0.1.0"
description = "Real-time signal engine, backtester, strategy lab, and reporting for the Indian F&O scalping agent."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<0.21",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "httpx>=0.27,<0.28",
    "websockets>=12.0,<13.0",
    "loguru>=0.7,<0.8",
    "apscheduler>=3.10,<4.0",
    "anthropic>=0.40,<0.50",
    "protobuf>=5.26,<6.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.6,<0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "data*"]
